--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ videos/
 /sitewatcher.spec
 /cookies.txt
 /www.youtube.com_cookies.txt
+/pmvd.log
+/pmvd.log.1
+/pmvd.log.2
+/pmvd.log.3
+/pmvd.log.4
+/pmvd.log.5
